# AnimeGui

./: .gitignore  LICENSE  README.md  README_FR.md  eslint.config.js  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
src/: App.tsx  api.ts  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  app_paths.rs  command_utils.rs  encoder.rs  lib.rs  main.rs  models.rs  monitor.rs  pipeline.rs  preview.rs  queue.rs  remuxer.rs  upscaler.rs  vobsub.rs
src/components/Boot/: BootWindowPage.tsx
src/components/DvdSubs/: DvdSubtitleWindowPage.tsx
src/components/Monitor/: MonitorPanel.tsx
src/components/Preview/: PreviewWindowPage.tsx
src/components/Queue/: QueuePanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/ui/: button.tsx  card.tsx  progress.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  slider.tsx  spinner.tsx  switch.tsx
tools/tesseract/dic/: tesseract_user_words_fra.txt  user_ocr_replacements.json
