[package]
name = "anime_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "anime_gui_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
png = "0.17"

[profile.dev]
incremental = false
